// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commitPrice 1`] = `
Array [
  Array [
    Array [
      "3000000000000000000",
      4,
    ],
    "0x03ee06f400000000000000000000000000000000000000000000000029a2241af62c00000000000000000000000000000000000000000000000000000000000000000004",
    "address",
    "privateKey",
    1,
    2,
    -1,
  ],
]
`;

exports[`startMagi 1`] = `
Array [
  Array [
    Array [
      "3000000000000000000",
      4,
    ],
    "0x660d6eaf00000000000000000000000000000000000000000000000029a2241af62c00000000000000000000000000000000000000000000000000000000000000000004",
    "address",
    "privateKey",
    1,
    2,
    -1,
  ],
]
`;
